# random-sticker-cpp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  telegram_client.hpp  utility.hpp
Wix/: .gitignore  Wix.sln
Wix/Wix/: Product.wxs
